# bert-onnx-rs-pipeline

./: .gitattributes  .gitignore  Cargo.toml  README.md  medium.csv
src/: main.rs  python_alternative.py  python_output.csv  rust_output.csv  utils.rs
training/: pytorch-model.py  requirement.txt
