[package]
name = "machine-learning"
version = "0.1.0"
authors = ["haixuanTao <hai-xuan.tao@student.ecp.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde=  "1"
serde_with = "1.6.4"
image = "0.23.14"
tokenizers = "0.10.1"
onnxruntime = { git = "https://github.com/haixuanTao/onnxruntime-rs", branch = 'owned_environment'}